--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     build: .
     command: >
       sh -c "python manage.py makemigrations --noinput &&
-      sh -c "python manage.py migrate --noinput &&
+             python manage.py migrate --noinput &&
              python manage.py collectstatic --noinput &&
              python manage.py search_index --rebuild -f &&
              gunicorn --bind 0.0.0.0:8000 --workers 3 core.wsgi:application"
