--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,16 +32,23 @@ services:
     build: .
     command: >
       sh -c "
-        echo 'Waiting for Elasticsearch...' &&
-        until curl -s http://elasticsearch:9200/_cluster/health | grep -q 'status'; do
+        echo 'Waiting for Elasticsearch to be ready...';
+        for i in $(seq 1 30); do
+          status=$(curl -s http://elasticsearch:9200/_cluster/health | jq -r .status 2>/dev/null);
+          if [[ $status == 'green' || $status == 'yellow' ]]; then
+            echo 'Elasticsearch is ready: '$status;
+            break;
+          fi;
+          echo 'Elasticsearch not ready yet, retrying...';
           sleep 5;
-        done &&
+        done;
         python manage.py makemigrations --noinput &&
         python manage.py migrate --noinput &&
         python manage.py collectstatic --noinput &&
         python manage.py search_index --rebuild -f &&
         gunicorn core.wsgi:application --bind 0.0.0.0:8000 --workers 3
       "
+
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
