--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: redis:7-alpine
     ports:
       - "6379:6379"
+    networks:
+      - dokploy-network
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -22,6 +24,8 @@ services:
     ports:
       - "9200:9200"
       - "9300:9300"
+    networks:
+      - dokploy-network
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:9200/_cluster/health || exit 1"]
       interval: 30s
@@ -48,11 +52,9 @@ services:
         python manage.py search_index --rebuild -f &&
         gunicorn core.wsgi:application --bind 0.0.0.0:8000 --workers 3
       "
-
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
-
     ports:
       - "8000:8000"
     networks:
@@ -71,7 +73,6 @@ services:
       - CELERY_RESULT_BACKEND=${CELERY_RESULT_BACKEND}
       - ELASTICSEARCH_DSL_HOST=${ELASTICSEARCH_DSL_HOST}
     depends_on:
-      #   condition: service_healthy
       redis:
         condition: service_healthy
       elasticsearch:
@@ -82,6 +83,8 @@ services:
     command: celery -A core worker -l info
     volumes:
       - .:/app
+    networks:
+      - dokploy-network
     environment:
       - DEBUG=${DEBUG:-False}
       - SECRET_KEY=${SECRET_KEY}
@@ -99,6 +102,8 @@ services:
     command: celery -A core beat -l info
     volumes:
       - .:/app
+    networks:
+      - dokploy-network
     environment:
       - DEBUG=${DEBUG:-False}
       - SECRET_KEY=${SECRET_KEY}
